--- a/tic/templates/base.html
+++ b/tic/templates/base.html
@@ -7,11 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Хрестики-нолики</title>
      <link rel='stylesheet' href='{% static "/css/styles.css" %}'>
+    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
 </head>
 <body>
 {% block content %}
 {% endblock content %}
 <script src = "{% static 'js/tictak.js' %}"></script>
+<script src="/static/bootstrap/js/bootstrap.bundle.min.js"></script>
 {% block javascript %}
 {% endblock javascript %}
 </body>
