--- a/tic/templates/index.html
+++ b/tic/templates/index.html
@@ -43,8 +43,9 @@
                 </div>
                 <div class="modal-body">
                     <p>1. Вписати своє ім'я</p>
-                    <p>2. Включити "ЛП" Мілани Хамелової</p>
-                    <p>3. Перемогти найсильнішого бота</p>
+                    <p>2. Вибрати за кого грати</p>
+                    <p>3. Включити "ЛП" Мілани Хамелової</p>
+                    <p>4. Перемогти найсильнішого бота</p>
 
                 </div>
             </div>
